syntax = "proto3";
package credential;

import "state.proto";

// VCS Credentials allow OrbitalCI to clone and download code for test and deployment
// Currently supported VCS types:
//    * Bitbucket
//    * GITHUB

enum VcsType {
    VCS_TYPE_UNSPECIFIED = 0;
    BITBUCKET = 1;
    GITHUB = 2;
    // GITLAB = 3;
    // GITTEA = 4;
}

// Server returns VcsCredEntry as response
message VcsCredCreateRequest {
    string org = 1;
    VcsType vcs_type = 2;
    string secret = 3;
}

message VcsCredEntry {
    int32 id = 1;
    int32 org_id = 2;
    VcsType vcs_type = 3;
    state.ActiveState active_state = 4;
}

// Server returns VcsCredEntry as response
message VcsCredDeleteRequest {
    string org = 1;
    string name = 2;
    bool force = 3;
}

// Server returns VcsCredEntry as response
message VcsCredUpdateRequest {
    string org = 1;
    string name = 2;
    string secret = 3;
    state.ActiveState active_state = 4;
}

// Server returns VcsCredListResponse as response
message VcsCredListRequest {
    string org = 1;
    VcsType vcs_type = 2;
}

message VcsCredListResponse {
    repeated VcsCredEntry vcs_cred_entries = 1;
}

/// FIXME: Re-add the service from credential_service.proto
/// https://github.com/level11consulting/orbitalci/issues/229
